fix: clickable table on safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -111,5 +111,6 @@
 		content: "";
 		position: absolute;
 		inset: 0;
+		z-index: 10;
 	}
 }
